# transcrire

./: .env.example  .gitignore  Devlog.md  README.md  Transcrire architecture proposal.md  Transcrire.cmd  Transrire Feature Proposal.md  build_cli.py  build_core.py  build_db.py  build_domain.py  build_installer.py  build_services.py  build_storage.py  build_tests.py  cleanup.py  config.py  launch.py  main.py  pipeline.py  pyproject.toml
scripts/: caption.py  chunker.py  fetch.py  imagegen.py  transcribe.py  utils.py
tests/core/: test_captions.py  test_core.py  test_images.py  test_pipeline.py  test_transcript.py
tests/services/: test_services.py
tests/storage/: test_db.py  test_storage.py
transcrire/: __init__.py  __main__.py  config.py  events.py  logger.py
transcrire/cli/: main.py  pc.py  rss.py
transcrire/core/: captions.py  images.py  pipeline.py  transcript.py
transcrire/domain/: enums.py  episode.py  stage_result.py
transcrire/services/: audio.py  gemini.py  groq.py  rss.py  whisper.py
transcrire/storage/: assets.py  db.py
