[project]
name = "transcrire"
version = "2.0.0"
description = "A semi-automated podcast content pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "tenacity>=8.0",
    "feedparser>=6.0",
    "openai-whisper>=20231117",
    "groq>=0.9",
    "google-genai>=1.0",
    "pillow>=10.0",
    "plyer>=2.1",
    "python-dotenv>=1.0",
]

[project.scripts]
transcrire = "transcrire.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external tools or network (deselect with '-m not integration')",
]
